--- a/frontend/src/components/NotesEditor/ContentArea.css
+++ b/frontend/src/components/NotesEditor/ContentArea.css
@@ -1,15 +1,16 @@
 .content-area {
-    color:white;
+    color:rgb(49, 49, 49);
     padding-right: 10px;
-    /* overflow-y: auto; */
-    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    /* height: 100%; */
     max-width: 1000px;
     width: 100%;
     padding: 1em;
+    margin: 0 auto;
 }
 
 .content-area textarea {
-    
     width: 100%;
     height: 100%;
     border: thick solid #C8C9CB;  
@@ -34,7 +35,6 @@
     text-align: center;
     font-size: 18px;
     padding-top: 2em;
-    color: white; 
 }
 
 .content-area .btn-save {
@@ -85,7 +85,6 @@
 
 .tags {
     display: flex;
-    
 }
 .tags .delete-tag-btn {
     font-size: 24px;
@@ -111,8 +110,7 @@
     margin: 0.4em 0.8em;
 }
 
-@media only screen and (max-width: 850px) {
-    .content-area {
-        margin-top: 2.5em;
-    }
+.content-area > h2 {
+    padding-bottom: 10px;
+    margin-bottom: 1em;
 }
