--- a/frontend/src/components/NotesEditor/Note.css
+++ b/frontend/src/components/NotesEditor/Note.css
@@ -13,7 +13,7 @@
     font-size: 24px;
     position: relative;
     left: -10px;
-    color: white;
+    color: rgb(243, 243, 243);
 }
 
 .note:nth-child(2) {
