--- a/frontend/src/components/NotesPanel/SideNavbar.css
+++ b/frontend/src/components/NotesPanel/SideNavbar.css
@@ -7,7 +7,7 @@
 
 .sidebar-nav {
     background-color: rgb(32, 32, 32);
-    height: 100vh;
+    height: 100%;
     max-width: 400px;
     padding: 0.4em 0.8em 0 0.8em;
     overflow-y: auto;
@@ -19,10 +19,13 @@
 }
 
 .sidebar-nav h1 {
-    color: white;
+    color: rgb(243, 243, 243);
     margin-bottom: 1em;
     padding-bottom: 16px;
-    border-bottom: 1px solid rgb(126, 126, 126);
+    border-bottom: 1px solid rgb(122, 122, 122);
+    font-family: 'Lobster';
+    text-align: center;
+    font-size: 42px;
 }
 
 .sidebar-nav .nav-buttons {
@@ -34,7 +37,7 @@
     padding: 0.2em 0.8em;
     border-radius: 6px;
     background-color:#688af0;
-    color: aliceblue;
+    color: rgb(243, 243, 243);
     border: 1px solid rgb(75, 75, 75);
     min-width: 114px;
 }
@@ -50,28 +53,28 @@
     z-index: 3;
     position: absolute;
     right: 14px;
-    /* left: 27%; */
-    top: 0px;
-    color: rgb(221, 221, 221);
+    top: 10px;
+    color: rgb(238, 238, 238);
     font-size: 40px;
     cursor: pointer;
+    transition: color 1s;
 }
 
 .sidebar-nav-hide {
     left: -1000px;
-    /* display: none; */
 }
 
 @media only screen and (max-width: 750px) {
     .sidebar {
         width: 100%;
         position: fixed;
-        /* top: 0; */
     }
 
     .sidebar-nav {
         max-width: 100%;
     }
+
+    
 
     #menuBtn {
         position: fixed;
